--- a/Identikit.DAL/Identikit.DAL.csproj
+++ b/Identikit.DAL/Identikit.DAL.csproj
@@ -64,10 +64,16 @@
       <DependentUpon>201703102229033_person-identity.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="bin\Debug\Identikit.DAL.dll.config" />
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <None Include="obj\Debug\Identikit.DAL.csproj.GenerateResource.Cache" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -77,6 +83,25 @@
     <EmbeddedResource Include="Migrations\201703102229033_person-identity.resx">
       <DependentUpon>201703102229033_person-identity.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="obj\Debug\Identikit.Migrations.personidentity.resources" />
+    <EmbeddedResource Include="obj\Debug\Identikit.Migrations.users.resources" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\EntityFramework.dll" />
+    <Content Include="bin\Debug\EntityFramework.SqlServer.dll" />
+    <Content Include="bin\Debug\EntityFramework.SqlServer.xml" />
+    <Content Include="bin\Debug\EntityFramework.xml" />
+    <Content Include="bin\Debug\Identikit.DAL.dll" />
+    <Content Include="bin\Debug\Identikit.DAL.pdb" />
+    <Content Include="bin\Debug\ru\EntityFramework.resources.dll" />
+    <Content Include="bin\Debug\ru\EntityFramework.SqlServer.resources.dll" />
+    <Content Include="obj\Debug\Identikit.DAL.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Debug\Identikit.DAL.dll" />
+    <Content Include="obj\Debug\Identikit.DAL.pdb" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Release\" />
+    <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
