--- a/Identikit.DAL/Identikit.DAL.csproj
+++ b/Identikit.DAL/Identikit.DAL.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Entities\EyeColor.cs" />
     <Compile Include="Entities\HairColor.cs" />
+    <Compile Include="Entities\Idenfiable.cs" />
     <Compile Include="Entities\PersonIdentity.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="IdentikitContext.cs" />
@@ -68,6 +69,9 @@
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\Repository.cs" />
+    <Compile Include="Repositories\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
