--- a/Identikit/bin/Identikit.dll.config
+++ b/Identikit/bin/Identikit.dll.config
@@ -18,7 +18,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <authentication mode="None" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/LoginPage" timeout="2880" />
+    </authentication>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
