--- a/Identikit.Tests/Identikit.Tests.csproj
+++ b/Identikit.Tests/Identikit.Tests.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Repositories\RepositoryTests.cs" />
+    <Compile Include="Services\LoginServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
