--- a/Identikit/Identikit.csproj
+++ b/Identikit/Identikit.csproj
@@ -280,10 +280,10 @@
     <Content Include="bin\WebGrease.dll" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\reset.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
     <Content Include="obj\Debug\Identikit.csproj.FileListAbsolute.txt" />
     <Content Include="obj\Debug\Identikit.dll" />
     <Content Include="obj\Debug\Identikit.pdb" />
@@ -295,6 +295,8 @@
     <Content Include="bin\roslyn\VBCSCompiler.exe.config" />
     <Content Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <Content Include="obj\Debug\Identikit.csprojResolveAssemblyReference.cache" />
+    <Content Include="Content\Layout\Layout.less" />
+    <Content Include="Content\Login\Login.less" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -317,7 +319,7 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\LoginPage.cshtml" />
-    <Content Include="Views\Account\Index.cshtml" />
+    <Content Include="Views\Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
