--- a/Identikit.Tests/Identikit.Tests.csproj
+++ b/Identikit.Tests/Identikit.Tests.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Repositories\RepositoryTest.cs" />
+    <Compile Include="Repositories\UserRepositoryTest.cs" />
     <Compile Include="Services\LoginServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
